<resources>
    <string name="app_name">CalculatorExercise</string>
    <string name="number_one">Number One</string>
    <string name="number_two">Number Two</string>
    <string name="operand_hint">…</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="times_sign">X</string>
    <string name="result_hint">Your result will show here</string>
    <string name="equals_sign">=</string>
    <string name="divide_sign">/</string>
</resources>