<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.calculatorexercise.viewmodel.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ui.MainActivity">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/result_hint"
            android:textSize="30sp"
            android:layout_margin="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/selected_operand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    
        <EditText
            android:id="@+id/number_one"
            android:hint="@string/number_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/selected_operand"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/selected_operand"
            android:layout_width="14dp"
            android:layout_height="29dp"
            android:hint="@string/operand_hint"
            android:textSize="20sp"
            android:text="@{viewmodel.operand}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    
    
        <EditText
            android:id="@+id/number_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/number_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/selected_operand"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    
        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_sign"
            android:onClick="@{viewmodel::onOperandClick}"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/selected_operand"
            app:layout_constraintBottom_toTopOf="@id/times_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/minus_button"/>
    
        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_sign"
            android:onClick="@{viewmodel::onOperandClick}"
            android:layout_margin="30dp"
            app:layout_constraintTop_toTopOf="@id/plus_button"
            app:layout_constraintBottom_toBottomOf="@id/plus_button"
            app:layout_constraintStart_toEndOf="@id/plus_button"
            app:layout_constraintEnd_toEndOf="parent" />
    
        <Button
            android:id="@+id/times_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times_sign"
            android:onClick="@{viewmodel::onOperandClick}"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/plus_button"
            app:layout_constraintBottom_toTopOf="@id/equals_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divide_button" />
    
        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times_sign"
            android:onClick="@{viewmodel::onOperandClick}"
            android:layout_margin="30dp"
            app:layout_constraintTop_toTopOf="@id/times_button"
            app:layout_constraintBottom_toBottomOf="@id/times_button"
            app:layout_constraintStart_toEndOf="@id/times_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/equals_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equals_sign"
            android:textSize="20sp"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/times_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/plus_button"
            app:layout_constraintEnd_toEndOf="@id/divide_button" />
    
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>